fix spacing bug

--- a/style.css
+++ b/style.css
@@ -20,5 +20,10 @@
 }
 
 #cursor {
-  letter-spacing: 0px;
+  /*letter-spacing: -2px;*/
+  z-index: 999;
+}
+
+#last-letter {
+
 }
